Bug 250118 - KIO::AccessManager::createRequest does not handle all operations
Summary: KIO::AccessManager::createRequest does not handle all operations
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
: 242141 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-09-04 01:32 UTC by Andrea Diamantini
Modified: 2010-11-13 08:26 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.4
Sentry Crash Report:


Attachments
kio accessmanager createrequest patch (922 bytes, patch)
2010-09-04 01:32 UTC, Andrea Diamantini
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrea Diamantini 2010-09-04 01:32:38 UTC
Created attachment 51293 [details]
kio accessmanager createrequest patch

Version:           SVN (using Devel) 
OS:                Linux

the switch(op) in KIO::accessmanager::createRequest method does not handle all QNAM::operation(s), returning 0 when a custom or a delete one is called. This lets happily crash QtWebKit :)
An example site of this behaviour is http://www.sfx.co.uk/2010/08/26/from-the-sfx-office-25/ as explained in bug:249275.
The attached patch, similar to the one used in rekonq to address the issue, should workaround the problem, waiting for a "proper fix". 

Reproducible: Didn't try
Comment 1 Andrea Diamantini 2010-09-10 12:13:31 UTC
Dawit?
Comment 2 Dawit Alemayehu 2010-11-06 18:38:10 UTC
For some reason I did not see this bug until now nor did I recieve the notification though my email address is in the CC list. Anyhow, it will be fixed shortly...
Comment 3 Dawit Alemayehu 2010-11-06 19:16:53 UTC
SVN commit 1193664 by adawit:

- Added support for missing QNAM DeleteOperation.
- Let QNAM handle all operations not supported by KIO, e.g. CustomOperation.

BUG:250118


 M  +13 -6     accessmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1193664
Comment 4 Dawit Alemayehu 2010-11-06 19:25:18 UTC
SVN commit 1193669 by adawit:

Backported the fix for unhandled QNAM operations that cause QtWebKit to crash.

CCBUG:250118

 M  +9 -3      accessmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1193669
Comment 5 Dawit Alemayehu 2010-11-13 08:26:28 UTC
*** Bug 242141 has been marked as a duplicate of this bug. ***