- Added support for missing QNAM DeleteOperation. - Let QNAM handle all operations not supported by KIO, e.g. CustomOperation.

BUG:250118

svn path=/trunk/KDE/kdelibs/; revision=1193664